tests/e2e/multi_line_function_arguments3.error
Error: syntax error in story at line 3, column 1

3|    b=1
      ^

E0046: An indented block is required to be before here
